CruiseControl Status Menu Release Notes

Changes listed by release.

CCMenu 1.6.3

* Fixed a bug that caused a substantial memory leak


CCMenu 1.6.2

* Fixed a bug with authentication negotiation


CCMenu 1.6.1

* Fixed problem when using authentication with
  URLs that have no port


CCMenu 1.6

* Handles server authentication requests and stores
  passwords in user's keychain
* Existing projects can be edited
* Project list preferences are resizable


CCMenu 1.5.1 (Mac App Store only)

* Runs in sandbox
* Removed feature to open Notfication pane in 
  System Preferences; this feature used Apple Script 
  and that was not accepted for the Mac App Store.


CCMenu 1.5

* Now requires OS X 10.8 Mountain Lion
* Uses Notification Center instead of Growl
* The app does not run in a sandbox because the update
  mechanism (Sparkle) does not yet work when run in a
  sandboxed application. There should be a sandboxed 
  version of CCMenu in the Mac App Store soon.


CCMenu 1.4.1

* Preparation for update to Mountain Lion version
* Updated update mechanism (Sparkle)
* Now runs in 64bit
* Added code signature


CCMenu 1.4

* Now requires Mac OS X 10.6
* Sound notifications played by CCMenu
* Basic build timing display in menu and window
* Supports ThoughtWorks Go integration servers 
* Fixed timestamp parsing for Jenkins/Hudson
* Fixed memory leak (#3426287)


CCMenu 1.3

* Now requires Mac OS X 10.5
* Handling parse errors (#2315056 and #3051368)
* Menu items now sorted alphabetically (#3111566)


CCMenu 1.2

* Connection errors are now displayed when clicking on 
  a project in the menu
* Connection errors are no longer logged to console
  (#1894125)
* Fixed a few (harmless) memory leaks; thanks to clang
  scan build


CCMenu 1.1

* Supports Hudson integration servers


CCMenu 1.0

* Improved URL handling in 'add projects' dialog
* Now automatically determines full URL in 'add
  projects' dialog
* Fixed HTTPS bug (#1805720)


CCMenu 0.9.5
